--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculum Vitae</title>
-    <link rel="stylesheet" href="es.css">
+    <link rel="stylesheet" href="style.css">
     <!-- Icnos de fontawesome -->
     <script src="https://kit.fontawesome.com/88607a3f30.js" crossorigin="anonymous"></script>
       <!-- importar fuentes de Google Fonts  -->
