--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
  </div>
  <div class="padding centrar">
      <h1>Milagros Alvarado</h1>
-     <h2>DESARROLLADORA FRONTEND</h2>
+     <h2>DESARROLLADORA FULL STACK</h2>
 </div>
 </div>
 <div class="container1 centrar">
     <div class="padding1 centrar">
     <h3>CONTACTO</h3>
     <ul>
-        <li><i class="fa-solid fa-envelope"></i>milagrosalvarado010@gmail.com</li>
-        <li><i class="fa-solid fa-phone"></i></i>2994599175</li>
-        <li><i class="fa-brands fa-linkedin"></i><a href="https://www.linkedin.com/in/milagros-alvarado-456021263/" target="_blank" rel="noopener noreferrer"   >Linkedin</a></li>
+        <li><i class="fa-solid fa-envelope"></i>milagrosalvarado001@gmail.com</li>
+        <li><i class="fa-solid fa-phone"></i>2994599175</li>
+        <li><i class="fa-brands fa-linkedin"></i><a href="https://www.linkedin.com/in/milagros-alvarado-456021263/" target="_blank" rel="noopener noreferrer" style="font-size:inherit;" >Linkedin</a></li>
  </ul>
  <h3>IDIOMAS</h3>
  <ul>
@@ -38,24 +38,28 @@
     <li>Inglés medio</li>
  </ul>
  <h3>HABILIDADES</h3>
- <h6>Soft</h6>
  <ul>
-    <li>Autodidacta</li>
-    <li>Trabajo en equipo</li>
-    <li>Iniciativa</li>
-    <li>Comunicación efectiva</li>
+    <li>Diseño web</li>
+    <li>Front-End</li>
+    <li>Back-End</li>
+    <li>Linux</li>
+    <li>Agile</li>
+
 </ul>
-<h6>hard</h6>
+<h3>HERRAMIENTAS</h3>
 <ul>
     <li>Html5</li>
     <li>Css3</li>
     <li>JavaScript</li>
     <li>Bootstrap</li>
+   <li> Node JS</li>
+   <li>MariaDB</li>
+   <li>React</li>
 </ul>
 </div>
 <div class="padding1 centrar">
     <h3>PERFIL PERSONAL</h3>
-    <P>Soy una desarrolladora Frontend que ambiciona convertirse en Full Stack. Disfruto aprendiendo nuevas tecnologías, por lo que mi objetivo es un puesto desafiante y dinámico donde poder compartir mi experiencia y a su vez adquirir nuevos conocimientos.</P>
+    <P>Soy estudiante del segundo año de Desarrollo de Software Full Stack, me apasiona aprender nuevas tecnologías. Mi objetivo es participar en proyectos que me permitan seguir creciendo profesionalmente y ampliar mi experiencia en el campo del desarrollo de software. Me considero una persona proactiva, creativa y comprometida. Estoy segura de que mi pasión y habilidades serán una valiosa contribución para cualquier equipo de trabajo en el que tenga la oportunidad de participar</P>
      <h3>FORMACIÓN ACADÉMICA</h3>
     <ul>
         <li>(2012 - 2018)  Bachiller en Informática</li>
@@ -70,7 +74,7 @@
        <a class="button" id="btn1" href="#">Mostrar Diplomatura</a>
     <div class="ventana1" id="mostrar1">
         <img class="icono" id="X2" src="img/x-lg.svg" alt="x">
-        <img  class="diplomatura" src="img/FT AR - Certificado_page-0001.jpg" alt="">
+        <img  class="diplomatura" src="img/certificate.jpg" alt="">
        </div>
        
     <h3>PORTAFOLIO</h3>
